tests/snapshots/formats__dpx__frame.dpx.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ frame.dpx — 2×2, User-defined, 10-bit, big-endian  [0x0+0x810]
  ▾ File information  [0x0+0x300]
      Magic: "SDPX"  [0x0+0x4]
      Image data offset: 0x800  [0x4+0x4]
      Version: "V2.0"  [0x8+0x8]
      File size: 2064  [0x10+0x4]
      Ditto key: Same as the previous frame (0x0)  [0x14+0x4]
      Generic header size: 0  [0x18+0x4]
      Industry header size: 0  [0x1c+0x4]
      User data size: 0  [0x20+0x4]
      File name: "fillyfoal.dpx"  [0x24+0x64]
      Creation time: ""  [0x88+0x18]
      Creator: "2026:10:06:00:00:00Z"  [0xa0+0x64]
      Project: ""  [0x104+0xc8]
      Copyright: ""  [0x1cc+0xc8]
      Encryption key: 0x0  [0x294+0x4]
      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x298+0x68]
  ▾ Image information — 2×2, 1 element  [0x300+0x280]
      Orientation: Left to right, top to bottom (0x0)  [0x300+0x2]
      Number of elements: 1  [0x302+0x2]
      Pixels per line: 2  [0x304+0x4]
      Lines per element: 2  [0x308+0x4]
    ▾ Image element 0 — User-defined, 10-bit  [0x30c+0x48]
        Data sign: Unsigned (0x0)  [0x30c+0x4]
        Reference low data code: 0  [0x310+0x4]
        Reference low quantity: 0  [0x314+0x4]
        Reference high data code: 0  [0x318+0x4]
        Reference high quantity: 0  [0x31c+0x4]
        Descriptor: User-defined (0x0)  [0x320+0x1]
        Transfer characteristic: User-defined (0x0)  [0x321+0x1]
        Colorimetric specification: User-defined (0x0)  [0x322+0x1]
        Bit depth: 10  [0x323+0x1]
        Packing: Packed into 32-bit words (0x0)  [0x324+0x2]
        Encoding: None (0x0)  [0x326+0x2]
        Data offset: 0x0  [0x328+0x4]
        End-of-line padding: 0  [0x32c+0x4]
        End-of-image padding: 0  [0x330+0x4]
        Description: ""  [0x334+0x20]
      Unused image elements  [0x354+0x1f8]
      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x54c+0x34]
  ▾ Orientation header  [0x580+0x100]
      X offset: 0  [0x580+0x4]
      Y offset: 0  [0x584+0x4]
      X center: 0  [0x588+0x4]
      Y center: 0  [0x58c+0x4]
      X original size: 0  [0x590+0x4]
      Y original size: 0  [0x594+0x4]
      Source file name: ""  [0x598+0x64]
      Source creation time: ""  [0x5fc+0x18]
      Input device: ""  [0x614+0x20]
      Input device serial number: ""  [0x634+0x20]
      Border left: 0  [0x654+0x2]
      Border right: 0  [0x656+0x2]
      Border top: 0  [0x658+0x2]
      Border bottom: 0  [0x65a+0x2]
      Pixel aspect ratio (horizontal): 0  [0x65c+0x4]
      Pixel aspect ratio (vertical): 0  [0x660+0x4]
      X scanned size: 0  [0x664+0x4]
      Y scanned size: 0  [0x668+0x4]
      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x66c+0x14]
  ▾ Film header  [0x680+0x100]
      Film manufacturer ID: ""  [0x680+0x2]
      Film type: ""  [0x682+0x2]
      Offset in perfs: ""  [0x684+0x2]
      Prefix: ""  [0x686+0x6]
      Count: ""  [0x68c+0x4]
      Format: ""  [0x690+0x20]
      Frame position in sequence: 0  [0x6b0+0x4]
      Sequence length: 0  [0x6b4+0x4]
      Held count: 0  [0x6b8+0x4]
      Frame rate: 0  [0x6bc+0x4]
      Shutter angle: 0  [0x6c0+0x4]
      Frame identification: ""  [0x6c4+0x20]
      Slate information: ""  [0x6e4+0x64]
      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x748+0x38]
  ▾ Television header — time code 00:00:00:00  [0x780+0x80]
      Time code: 0x0 — 00:00:00:00  [0x780+0x4]
      User bits: 0x0  [0x784+0x4]
      Interlace: Non-interlaced (0x0)  [0x788+0x1]
      Field number: 0  [0x789+0x1]
      Video signal standard: Undefined (0x0)  [0x78a+0x1]
      Padding: 0  [0x78b+0x1]
      Horizontal sampling rate: 0  [0x78c+0x4]
      Vertical sampling rate: 0  [0x790+0x4]
      Temporal sampling rate: 0  [0x794+0x4]
      Time offset: 0  [0x798+0x4]
      Gamma: 0  [0x79c+0x4]
      Black level code: 0  [0x7a0+0x4]
      Black gain: 0  [0x7a4+0x4]
      Breakpoint: 0  [0x7a8+0x4]
      Reference white level code: 0  [0x7ac+0x4]
      Integration time: 0  [0x7b0+0x4]
      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x7b4+0x4c]
    Image data  [0x800+0x10]
