tests/snapshots/formats__dpx__testsrc-rgb10.dpx.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ testsrc-rgb10.dpx — 4×2, RGB, 10-bit, Unspecified video, little-endian  [0x0+0x6a0]
  ▾ File information  [0x0+0x300]
      Magic: "XPDS"  [0x0+0x4]
      Image data offset: 0x680  [0x4+0x4]
      Version: "V1.0"  [0x8+0x8]
      File size: 1696  [0x10+0x4]
      Ditto key: New frame (0x1)  [0x14+0x4]
      Generic header size: 1664  [0x18+0x4]
      Industry header size: 0  [0x1c+0x4]
      User data size: 0  [0x20+0x4]
      File name: ""  [0x24+0x64]
      Creation time: ""  [0x88+0x18]
      Creator: "Lavc62.28.102"  [0xa0+0x64]
      Project: ""  [0x104+0xc8]
      Copyright: ""  [0x1cc+0xc8]
      Encryption key: 0xffffffff  [0x294+0x4]
      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x298+0x68]
  ▾ Image information — 4×2, 1 element  [0x300+0x280]
      Orientation: Left to right, top to bottom (0x0)  [0x300+0x2]
      Number of elements: 1  [0x302+0x2]
      Pixels per line: 4  [0x304+0x4]
      Lines per element: 2  [0x308+0x4]
    ▾ Image element 0 — RGB, 10-bit  [0x30c+0x48]
        Data sign: Unsigned (0x0)  [0x30c+0x4]
        Reference low data code: 0  [0x310+0x4]
        Reference low quantity: 0  [0x314+0x4]
        Reference high data code: 0  [0x318+0x4]
        Reference high quantity: 0  [0x31c+0x4]
        Descriptor: RGB (0x32)  [0x320+0x1]
        Transfer characteristic: Unspecified video (0x4)  [0x321+0x1]
        Colorimetric specification: Unspecified video (0x4)  [0x322+0x1]
        Bit depth: 10  [0x323+0x1]
        Packing: Filled to 32-bit words, method A (0x1)  [0x324+0x2]
        Encoding: None (0x0)  [0x326+0x2]
        Data offset: 0x680  [0x328+0x4]
        End-of-line padding: 0  [0x32c+0x4]
        End-of-image padding: 0  [0x330+0x4]
        Description: ""  [0x334+0x20]
      Unused image elements  [0x354+0x1f8]
      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x54c+0x34]
  ▾ Orientation header  [0x580+0x100]
      X offset: 0  [0x580+0x4]
      Y offset: 0  [0x584+0x4]
      X center: 0  [0x588+0x4]
      Y center: 0  [0x58c+0x4]
      X original size: 0  [0x590+0x4]
      Y original size: 0  [0x594+0x4]
      Source file name: ""  [0x598+0x64]
      Source creation time: ""  [0x5fc+0x18]
      Input device: ""  [0x614+0x20]
      Input device serial number: ""  [0x634+0x20]
      Border left: 0  [0x654+0x2]
      Border right: 0  [0x656+0x2]
      Border top: 0  [0x658+0x2]
      Border bottom: 0  [0x65a+0x2]
      Pixel aspect ratio (horizontal): 1  [0x65c+0x4]
      Pixel aspect ratio (vertical): 1  [0x660+0x4]
      X scanned size: 0  [0x664+0x4]
      Y scanned size: 0  [0x668+0x4]
      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x66c+0x14]
    Image data  [0x680+0x20]
