tests/snapshots/formats__dpx__testsrc-rgb48.dpx.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ testsrc-rgb48.dpx — 4×2, RGB, 16-bit, 1 elements, little-endian  [0x0+0x6b0]
  ▾ File information  [0x0+0x300]
      Magic: "XPDS"  [0x0+0x4]
      Image data offset: 0x680  [0x4+0x4]
      Version: "V1.0"  [0x8+0x8]
      File size: 1712  [0x10+0x4]
      Ditto key: 1  [0x14+0x4]
      Generic header size: 1664  [0x18+0x4]
      Industry header size: 0  [0x1c+0x4]
      User data size: 0  [0x20+0x4]
      File name: ""  [0x24+0x64]
      Creation time: ""  [0x88+0x18]
      Creator: "Lavc62.28.102"  [0xa0+0x64]
      Project: ""  [0x104+0xc8]
      Copyright: ""  [0x1cc+0xc8]
      Encryption key: 0xffffffff  [0x294+0x4]
      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x298+0x68]
  ▾ Image information  [0x300+0x280]
      Orientation: Left to right, top to bottom (0x0)  [0x300+0x2]
      Number of elements: 1  [0x302+0x2]
      Pixels per line: 4  [0x304+0x4]
      Lines per element: 2  [0x308+0x4]
    ▾ Image element  [0x30c+0x48]
        Data sign: 0  [0x30c+0x4]
        Reference low data code: 0  [0x310+0x4]
        Reference low quantity: 0  [0x314+0x4]
        Reference high data code: 0  [0x318+0x4]
        Reference high quantity: 0  [0x31c+0x4]
        Descriptor: RGB (0x32)  [0x320+0x1]
        Transfer characteristic: Unspecified video (0x4)  [0x321+0x1]
        Colorimetric specification: Unspecified video (0x4)  [0x322+0x1]
        Bit depth: 16  [0x323+0x1]
        Packing: Packed into 32-bit words (0x0)  [0x324+0x2]
        Encoding: None (0x0)  [0x326+0x2]
        Data offset: 0x680  [0x328+0x4]
        End-of-line padding: 0  [0x32c+0x4]
        End-of-image padding: 0  [0x330+0x4]
        Description: ""  [0x334+0x20]
      Unused image elements  [0x354+0x1f8]
      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x54c+0x34]
    Orientation header  [0x580+0x100]
    Film header  [0x680+0x30]
      ! truncated: needed 0x100 bytes at 0x680, only 0x30 available [0x680+0x100]
    Television header  [0x6b0+0x0]
      ! truncated: needed 0x80 bytes at 0x780, only 0x0 available [0x780+0x80]
    Image data  [0x680+0x30]
